# RiRender

./: .gitignore  CMakeLists.txt  Halton_10AreaLight.ppm  Halton_1center.ppm  Halton_1pointLight.ppm  README.md  binary.ppm  binary_ortho.ppm  binary_persp.ppm  binary_tri.ppm  halton20.ppm  random20.ppm  ref.ppm  run.sh  whitted_10AreaLight.ppm  whitted_test.ppm  whitted_test_mirror.ppm
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/accelerators/: CMakeLists.txt  bvh.cpp  bvh.h
src/accelerators/include/accelerators/: bvh.h
src/accelerators/src/: bvh.cpp
src/app/: CMakeLists.txt  main.cpp
src/cameras/: CMakeLists.txt  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
src/cameras/include/cameras/: orthographic.h  perspective.h
src/cameras/src/: orthographic.cpp  perspective.cpp
src/core/: CMakeLists.txt  camera.h  common.cpp  common.h  film.cpp  film.h  geometry.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  lowdiscrepancy.cpp  lowdiscrepancy.h  material.h  primitive.cpp  primitive.h  reflection.cpp  reflection.h  sampler.cpp  sampler.h  sampling.h  scene.cpp  scene.h  shape.cpp  shape.h  spectrum.h  texture.h  transform.cpp  transform.h
src/core/include/core/: camera.h  common.h  film.h  geometry.h  integrator.h  interaction.h  light.h  lowdiscrepancy.h  material.h  primitive.h  reflection.h  sampler.h  sampling.h  scene.h  shape.h  spectrum.h  texture.h  transform.h
src/core/src/: common.cpp  film.cpp  geometry.cpp  integrator.cpp  interaction.cpp  light.cpp  lowdiscrepancy.cpp  primitive.cpp  reflection.cpp  sampler.cpp  scene.cpp  shape.cpp  transform.cpp
src/ext/: CMakeLists.txt
src/ext/pcg32/src/: pcg32-demo.cpp
src/integrators/: CMakeLists.txt  whitted.cpp  whitted.h
src/integrators/include/integrators/: path.h  whitted.h
src/integrators/src/: path.cpp  whitted.cpp
src/lights/: CMakeLists.txt  diffuse.cpp  diffuse.h  point.cpp  point.h
src/lights/include/lights/: diffuse.h  point.h
src/lights/src/: diffuse.cpp  point.cpp
src/materials/: CMakeLists.txt  matte.cpp  matte.h  mirror.cpp  mirror.h
src/materials/include/materials/: glass.h  matte.h  mirror.h
src/materials/src/: glass.cpp  matte.cpp  mirror.cpp
src/samplers/: CMakeLists.txt  halton.cpp  halton.h  lowdiscrepancy.h
src/samplers/include/samplers/: halton.h
src/samplers/src/: halton.cpp
src/shapes/: CMakeLists.txt  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/shapes/include/shapes/: sphere.h  triangle.h
src/shapes/src/: sphere.cpp  triangle.cpp
src/textures/: CMakeLists.txt  constant.h
src/textures/include/textures/: constant.h
